[project]
name = "languagemodeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.5.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "pip>=25.0.1",
    "pypdf>=5.4.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
]
